--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
           <p class="mt-6 text-white/80 max-w-md">
             Work-management made simple. Find flexible jobs that fit your schedule.
           </p>
-          <button class="mt-8 bg-white text-[#043873] font-semibold px-6 py-3 rounded-lg hover:bg-[#FFDC4D]/90 transition">
-            Get Started
-          </button>
+          <a href="/aminepages/schedule.html">
+  <button class="mt-8 bg-white text-[#043873] font-semibold px-8 py-3 rounded-lg hover:bg-gray-100 transition-colors">
+    Get Started
+  </button>
+</a>
         </div>
 
         <!-- HERO IMAGE -->
