--- a/job-detail.html
+++ b/job-detail.html
@@ -8,15 +8,27 @@
 
 
 <header class="bg-[#0B3A6F] text-white">
-<div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-<a href="jobs.html" class="text-xl font-bold hover:text-yellow-300">Khademni</a>
-<nav class="hidden md:flex space-x-6">
-<a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
-<a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
-<a href="#" class="hover:text-yellow-300">Équilibre Travail</a>
-</nav>
-<button class="bg-yellow-400 text-black px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300">Login</button>
-</div>
+  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+    
+    <!-- Logo -->
+   <a href="/" class="text-xl font-bold hover:text-yellow-300">
+      Khademni
+    </a>
+
+    <!-- Navigation -->
+    <nav class="hidden md:flex space-x-6">
+  
+      <a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
+      <a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
+      <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
+    </nav>
+
+    <!-- Login -->
+    <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300">
+      Login
+    </button>
+
+  </div>
 </header>
 
 
