--- a/interface3.html
+++ b/interface3.html
@@ -184,23 +184,28 @@
 <body>
     <!-- Header Section -->
     <header class="bg-[#0B3A6F] text-white">
-        <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-            <!-- Logo -->
-            <h1 class="text-xl font-bold">Khademni</h1>
+  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+    
+    <!-- Logo -->
+   <a href="/" class="text-xl font-bold hover:text-yellow-300">
+      Khademni
+    </a>
 
-            <!-- Navigation -->
-            <nav class="hidden md:flex space-x-6">
-                <a href="#" class="hover:text-yellow-300">Offres compatibles</a>
-                <a href="#" class="hover:text-yellow-300">Profil & Expérience</a>
-                <a href="#" class="hover:text-yellow-300">Équilibre Travail</a>
-            </nav>
+    <!-- Navigation -->
+    <nav class="hidden md:flex space-x-6">
+  
+      <a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
+      <a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
+      <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
+    </nav>
 
-            <!-- Login -->
-            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300">
-                Login
-            </button>
-        </div>
-    </header>
+    <!-- Login -->
+    <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300">
+      Login
+    </button>
+
+  </div>
+</header>
 
     <!-- Main Dashboard Content -->
     <div class="p-4 md:p-6">
