--- a/lien_cv.html
+++ b/lien_cv.html
@@ -17,18 +17,20 @@
 </head>
 <body class="bg-white">
 
-       <header class="bg-[#0B3A6F] text-white">
+<header class="bg-[#0B3A6F] text-white">
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
     
     <!-- Logo -->
-    <h1 class="text-xl font-bold">Khademni</h1>
+   <a href="/" class="text-xl font-bold hover:text-yellow-300">
+      Khademni
+    </a>
 
     <!-- Navigation -->
     <nav class="hidden md:flex space-x-6">
   
-      <a href="#" class="hover:text-yellow-300">Offres compatibles</a>
-      <a href="#" class="hover:text-yellow-300">Profil & Expérience</a>
-      <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre cv</a>
+      <a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
+      <a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
+      <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
     </nav>
 
     <!-- Login -->
