final push on vercel test

--- a/job-detail.html
+++ b/job-detail.html
@@ -7,30 +7,7 @@
 <body class="bg-gray-50">
 
 
-<header class="bg-[#0B3A6F] text-white">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    
-    <!-- Logo -->
-   <a href="/" class="text-xl font-bold hover:text-yellow-300">
-      Khademni
-    </a>
-
-    <!-- Navigation -->
-    <nav class="hidden md:flex space-x-6">
-  
-      <a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
-      <a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
-      <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
-    </nav>
-
-    <!-- Login -->
-    <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300">
-      Login
-    </button>
-
-  </div>
-</header>
-
+<div id="header"></div>
 
 <div class="max-w-4xl mx-auto p-6 bg-white shadow rounded mt-10">
 <h1 class="text-xl font-semibold mb-2">Job Title</h1>
@@ -55,11 +32,9 @@
 </div>
 
 
-<footer class="bg-[#0B3A6F] text-white py-6 mt-10">
-<div class="max-w-7xl mx-auto px-6 text-center">
-<p class="text-sm">© 2025 Khademni. All rights reserved.</p>
-</div>
-</footer>
+<div id="footer"></div>
+
+  <script src="./js/include.js"></script>
 
 
 </body>
