--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
         </div>
 
         <div>
-          <h2 class="text-3xl font-bold">Balanced Work</h2>
+          <h2 class="text-3xl font-bold">Our Dashboard</h2>
           <p class="mt-4 text-gray-600 max-w-md">
-            Maintain a healthy balance between work and life.
+           Check Our Dashboard to better understand what we offer.
           </p>
-          <button class="mt-6 text-[#043873] font-semibold">Learn more →</button>
+          <a href="interface3.html" class="mt-6 text-[#043873] font-semibold inline-block">
+  <button class="mt-6 text-[#043873] font-semibold">Learn more →</button>
+</a>
+          
         </div>
       </div>
     </section>
@@ -83,9 +86,12 @@
           <p class="mt-4 text-white/80 max-w-md">
             A simple and powerful platform to connect workers and employers.
           </p>
+                      <a href="interface4.html">
+
           <button class="mt-6 bg-white text-[#043873] font-semibold px-6 py-3 rounded-lg">
-            Explore
+  Explore Quick Jobs
           </button>
+          </a>
         </div>
 
         <!-- PLATFORM IMAGE -->
