--- a/style_selection.html
+++ b/style_selection.html
@@ -59,29 +59,7 @@
 
 
 <body class="bg-gray-50 min-h-screen">
-<header class="bg-[#0B3A6F] text-white">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    
-    <!-- Logo -->
-   <a href="/" class="text-xl font-bold hover:text-yellow-300">
-      Khademni
-    </a>
-
-    <!-- Navigation -->
-    <nav class="hidden md:flex space-x-6">
-  
-      <a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
-      <a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
-      <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
-    </nav>
-
-    <!-- Login -->
-    <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300">
-      Login
-    </button>
-
-  </div>
-</header>
+<div id="header"></div>
 
 <div class="container mx-auto p-8">
     <h1 class="text-4xl font-extrabold text-gray-800 text-center mb-12">Sélectionner un style visuel</h1>
@@ -177,95 +155,9 @@
         </a>
     </div>
 </div>
-<footer class="bg-[#0B3A6F] text-white">
-  <div class="max-w-7xl mx-auto px-6 py-10">
+<div id="footer"></div>
 
-    <!-- TOP -->
-    <div class="grid grid-cols-1 md:grid-cols-6 gap-8">
-
-      <!-- BRAND -->
-      <div class="md:col-span-2">
-        <div class="flex items-center gap-2 mb-3">
-          <svg class="w-6 h-6 fill-white" viewBox="0 0 24 24">
-            <path d="M12 2L2 7l10 5 10-5-10-5zm0 7.3L5 7l7-3.3L19 7l-7 2.3zM2 17l10 5 10-5"/>
-          </svg>
-          <span class="text-lg font-semibold">Khademni</span>
-        </div>
-
-        <p class="text-xs leading-5 text-blue-200 max-w-xs">
-          Khademni was created for the new ways we live and work.
-          We make a better workspace around the world.
-        </p>
-      </div>
-
-      <!-- PRODUCT -->
-      <div>
-        <h4 class="text-sm font-semibold mb-3">Product</h4>
-        <ul class="space-y-2 text-xs text-blue-200">
-          <li><a href="#" class="hover:text-white">Overview</a></li>
-          <li><a href="#" class="hover:text-white">Pricing</a></li>
-          <li><a href="#" class="hover:text-white">Customer stories</a></li>
-        </ul>
-      </div>
-
-      <!-- RESOURCES -->
-      <div>
-        <h4 class="text-sm font-semibold mb-3">Resources</h4>
-        <ul class="space-y-2 text-xs text-blue-200">
-          <li><a href="#" class="hover:text-white">Blog</a></li>
-          <li><a href="#" class="hover:text-white">Guides & tutorials</a></li>
-          <li><a href="#" class="hover:text-white">Help center</a></li>
-        </ul>
-      </div>
-
-      <!-- COMPANY -->
-      <div>
-        <h4 class="text-sm font-semibold mb-3">Company</h4>
-        <ul class="space-y-2 text-xs text-blue-200">
-          <li><a href="#" class="hover:text-white">About us</a></li>
-          <li><a href="#" class="hover:text-white">Careers</a></li>
-          <li><a href="#" class="hover:text-white">Media kit</a></li>
-        </ul>
-      </div>
-
-      <!-- CTA -->
-      <div>
-        <h4 class="text-sm font-semibold mb-3">Try It Today</h4>
-        <p class="text-xs text-blue-200 mb-3 leading-5">
-          Get started for free. Add your whole team as your needs grow.
-        </p>
-        <button class="bg-blue-500 hover:bg-blue-600 text-xs font-medium px-4 py-2 rounded-md">
-          Start today →
-        </button>
-      </div>
-
-    </div>
-
-    <!-- DIVIDER -->
-    <div class="border-t border-blue-800 mt-8 pt-4 flex flex-col md:flex-row md:items-center md:justify-between gap-3 text-xs text-blue-200">
-
-      <!-- LEFT -->
-      <div class="flex flex-wrap items-center gap-4">
-        <span class="flex items-center gap-1 cursor-pointer">
-          🌐 English
-        </span>
-        <a href="#" class="hover:text-white">Terms & privacy</a>
-        <a href="#" class="hover:text-white">Security</a>
-        <a href="#" class="hover:text-white">Status</a>
-        <span>© 2025 Khademni LLC.</span>
-      </div>
-
-      <!-- SOCIAL -->
-      <div class="flex gap-4">
-        <a href="#" class="hover:text-white">f</a>
-        <a href="#" class="hover:text-white">t</a>
-        <a href="#" class="hover:text-white">in</a>
-      </div>
-
-    </div>
-
-  </div>
-</footer>
+  <script src="./js/include.js"></script>
 
 </body>
 </html>
