--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p class="mt-6 text-white/80 max-w-md">
             Work-management made simple. Find flexible jobs that fit your schedule.
           </p>
-          <a href="/aminepages/schedule.html">
+          <a href="schedule.html">
   <button class="mt-8 bg-white text-[#043873] font-semibold px-8 py-3 rounded-lg hover:bg-gray-100 transition-colors">
     Get Started
   </button>
