--- a/map.html
+++ b/map.html
@@ -11,7 +11,7 @@
 
 
 <div class="max-w-5xl mx-auto p-6">
-<img src="./images/map.png" alt="Google Maps" class="rounded shadow mb-6" />
+<img src="./images/mapimage.png" alt="Google Maps" class="rounded shadow mb-6" />
 <div class="text-center">
 <button class="bg-yellow-300 px-6 py-2 rounded shadow">Trouver votre destination</button>
 </div>
