--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <!-- PLATFORM IMAGE -->
         <div class="hidden md:flex justify-center">
-          <img src="" alt="" class="w-full max-w-lg object-contain" />
+<img src="images/p.png" alt="" class="w-full max-w-sm object-contain" />
         </div>
       </div>
     </section>
@@ -105,7 +105,7 @@
     <section class="py-24">
       <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-16 items-center">
         <div class="hidden md:flex justify-center">
-          <img src="" alt="" class="w-full max-w-md object-contain" />
+          <img src="images/g.png" alt="" class="w-full max-w-sm object-contain" />
         </div>
 
         <div>
@@ -183,7 +183,7 @@
       <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-16 items-center">
         <div class="flex justify-center">
           <div class="w-72 h-72 rounded-full bg-white/20 flex items-center justify-center">
-            <img src="" alt="" class="w-56 h-56 object-contain" />
+            <img src="images/d.jpg" alt="" class="w-56 h-56 object-contain" />
           </div>
         </div>
 
@@ -207,7 +207,7 @@
         <div class="grid md:grid-cols-3 gap-10">
           <div class="bg-white shadow rounded-xl p-6">
             <div class="flex items-center gap-4 mb-4">
-              <img src="" alt="" class="w-12 h-12 rounded-full object-cover" />
+              <img src="images/c.jpg" alt="" class="w-12 h-12 rounded-full object-cover" />
               <div>
                 <p class="font-semibold">Client Name</p>
                 <p class="text-sm text-gray-400">Role</p>
@@ -220,7 +220,7 @@
 
           <div class="bg-[#043873] text-white shadow rounded-xl p-6">
             <div class="flex items-center gap-4 mb-4">
-              <img src="" alt="" class="w-12 h-12 rounded-full object-cover" />
+              <img src="images/b.jpg" alt="" class="w-12 h-12 rounded-full object-cover" />
               <div>
                 <p class="font-semibold">Client Name</p>
                 <p class="text-sm text-white/70">Role</p>
@@ -233,7 +233,7 @@
 
           <div class="bg-white shadow rounded-xl p-6">
             <div class="flex items-center gap-4 mb-4">
-              <img src="" alt="" class="w-12 h-12 rounded-full object-cover" />
+              <img src="images/a.jpg" alt="" class="w-12 h-12 rounded-full object-cover" />
               <div>
                 <p class="font-semibold">Client Name</p>
                 <p class="text-sm text-gray-400">Role</p>
